--- a/package.json
+++ b/package.json
@@ -1,25 +1,13 @@
 {
-  "name": "react-static-boilerplate",
-  "version": "0.2.1",
-  "description": "A boilerplate for building static sites with React and React Router",
+  "name": "",
+  "version": "0.1.0",
+  "description": "A group of examples to demonstrate part of how the web works",
   "engines": {
-    "node": "^4.2"
+    "node": "^6"
   },
   "scripts": {
-    "clean": "rimraf public",
-    "eslint": "eslint client",
-    "lint": "npm run -s eslint",
-    "conf": "babel-node ./scripts/generate-nginx-conf.js",
     "test": "echo 'No tests specified.'",
-    "start:dev": "babel-node ./server.js",
-    "start": "npm run start:dev",
-    "build:static": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
-    "build": "npm run clean && npm run build:static",
-    "preversion": "npm test",
-    "postversion": "git push && git push --tags",
-    "bump:patch": "npm version patch -m \"v%s\"",
-    "bump:minor": "npm version minor -m \"v%s\"",
-    "bump": "npm run bump:patch"
+    "start": "echo 'No start command specified.'"
   },
   "repository": {
     "type": "git",
@@ -32,41 +20,6 @@
   "license": "MIT",
   "homepage": "",
   "devDependencies": {
-    "autoprefixer-loader": "^3.1.0",
-    "axis": "^0.5.2",
-    "babel-cli": "^6.5.1",
-    "babel-core": "^6.5.1",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.2",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.0",
-    "cross-env": "^1.0.7",
-    "css-loader": "^0.23.0",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.0",
-    "eslint-plugin-react": "^3.12.0",
-    "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "history": "^2.0.0",
-    "normalize.css": "^3.0.3",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-router": "^1.0.3",
-    "react-static-webpack-plugin": "^0.4.0",
-    "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.2.0",
-    "rimraf": "^2.4.4",
-    "rupture": "^0.6.1",
-    "style-loader": "^0.13.0",
-    "stylus-loader": "^1.4.2",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.9",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {}
 }
